Fri Feb 20 17:12:14 2004  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* bin/tao_other_tests.lst: 

	  Modified script to run Pluggable and Simple_Two_Stage tests with
	  SCTP_SEQ transport protocol only when the SCTP config flag is
	  set.

Fri Feb 20 21:18:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* Static_Performance.dsw:
	* netsvcs/clients/Naming/Dump_Restore/Dump_Restore_static.dsp:
	* examples/Service_Configurator/IPC-tests/server/Server_static.dsp:
	* examples/ASX/CCM_App/CCM_App_static.dsp:
	  Removed these static msvc6 project files. Use MPC to generate these
	  if you need them. These are outdated and should have gone before 1.4
	  was released.

Fri Feb 20 18:47:26 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/msvc_static_order.lst:
	  Added FaultTolerance.dsp, RTCosScheduling and FtRtEvent.dsp to this
	  file, so that they are build first with all other needed libs in the
	  static builds.

Fri Feb 20 16:40:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* apps/mkcsregdb/mkcsregdb.cpp:
	  Fixed warning in BCB builds about comparing signed and unsigned
	  values

Fri Feb 20 07:51:04 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* etc/ace.doxygen:

	  Reverted the change "Sun Dec 28 15:09:34 UTC 2003  Don Hinton
	  <dhinton@dresystems.com>" since it broke stuff in
	  ACE-categories.html. Don seems to have a better fix. Till
	  then. This reversal will create problems for folks who untar
	  doxygen documentation on platfroms where the path length could
	  be an issue.

Thu Feb 19 15:22:49 2004  Steve Huston  <shuston@riverace.com>

	* ace/Template_Instantiations.cpp: Add a block to keep HP aC++ from
	  issuing a warning about an empty translation unit.

	* ace/Global_Macros.h: Added #include "ace/config-lite.h" because
	  this file checks on config options.

	* ace/config-all.h: No need to include "ace/Global_Macros.h" from here.

	* ace/MEM_Addr.cpp (same_host): To account for IPv4/IPv6 differences,