@@ -1,3 +1,14 @@
+Thu Feb 20 17:14:46 2004  Irfan Pyarali  <irfan@oomworks.com>
+
+	* ace\CDR_Base (NonNative LongLong and LongDouble): 
+
+	  Added assignment operators for these two types. 
+
+	* ace\CDR_Stream.cpp (read_16): 
+
+	  The function for reading a longdouble was adjusting and aligning
+	  the buffer to longlong size rather than to longdouble size.
+
 Fri Feb 20 17:12:14 2004  Yamuna Krishnamurthy  <yamuna@oomworks.com>
 
 	* bin/tao_other_tests.lst: 
